--- a/ansible/common/tasks/main.yml
+++ b/ansible/common/tasks/main.yml
@@ -2,3 +2,14 @@
 - name: Get the username running Ansible
   local_action: command whoami
   register: username_on_the_host
+
+- name: Set home directory
+  set_fact:
+    home_dir: "{{ lookup('env','HOME') }}"
+
+- name: Create basic directories
+  file: path={{ home_dir }}/{{ item }} state=directory
+  with_items:
+    - Projects
+    - Scratch
+    - Secrets
