--- a/ansible/util/tasks/main.yml
+++ b/ansible/util/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: Install general utilities
   command: brew install {{item}}
   with_items:
+    - htop
     - ripgrep
     - tree
     - watch
