--- a/ansible/neovim/tasks/main.yml
+++ b/ansible/neovim/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: "Create symlink to neovim configuration"
+  file: src={{ home_dir }}/macfiles/nvim dest={{ home_dir }}/.config/nvim state=link
+
 - name: "Check neovim installation status"
   stat:
     path: "/usr/local/bin/nvim"
