Install vim-numbertoggle plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/vim-auto-save"]
 	path = vendor/vim-auto-save
 	url = git@github.com:fernandoacorreia/vim-auto-save.git
+[submodule "vendor/vim-numbertoggle"]
+	path = vendor/vim-numbertoggle
+	url = git@github.com:fernandoacorreia/vim-numbertoggle.git
