Install editorconfig plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendor/vim-numbertoggle"]
 	path = vendor/vim-numbertoggle
 	url = git@github.com:fernandoacorreia/vim-numbertoggle.git
+[submodule "vendor/editorconfig-vim"]
+	path = vendor/editorconfig-vim
+	url = git@github.com:fernandoacorreia/editorconfig-vim.git
