Set up global .editorconfig file

--- a/ansible/util/tasks/main.yml
+++ b/ansible/util/tasks/main.yml
@@ -6,3 +6,9 @@
     - ripgrep
     - tree
     - watch
+
+- name: Create link for ~/.editorconfig
+  file:
+    src: "{{ macfiles_dir }}/.editorconfig"
+    dest: "{{ home_dir }}/.editorconfig"
+    state: link
